--- a/templates/graph.html
+++ b/templates/graph.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>LiMath Graphing Calculator</title>
+  <title>CalcBot Graphing Calculator</title>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <!-- Plotly untuk plotting interaktif di browser -->
   <script src="https://cdn.plot.ly/plotly-2.30.0.min.js"></script>
@@ -626,4 +626,5 @@
   setRanges(view.xr,view.yr);
 </script>
 </body>
+
 </html>
