--- a/templates/graph.html
+++ b/templates/graph.html
@@ -72,7 +72,7 @@
   </style>
 </head>
 <body>
-<header><strong>LiMath Graphing Calculator</strong></header>
+<header><strong>CalcBot Graphing Calculator</strong></header>
 
 <div class="app">
   <div class="sidebar">
@@ -628,3 +628,4 @@
 </body>
 
 </html>
+
